crates/contextdb-core/tests/fixtures/compile_fail/wallclock_into_lsn.stderr
error[E0308]: mismatched types
 --> tests/fixtures/compile_fail/wallclock_into_lsn.rs:5:21
  |
5 |     let _lsn: Lsn = w;
  |               ---   ^ expected `Lsn`, found `Wallclock`
  |               |
  |               expected due to this
